update test description

--- a/index.html
+++ b/index.html
@@ -25,10 +25,17 @@
     <script src="js/parser.js"></script>
     <script src="js/script.js"></script>
     <h1 class="title-app">Simulación: Onda en una cuerda</h1>
+    <small class="simulation-description">
+      La simulación muestra la <b>propagación</b> de ondas mecánicas, donde la
+      energía viaja sin mover materia. La reflexión en los extremos sigue la
+      conservación del <b>momento y energía</b>, y la
+      <b>superposición</b> permite la combinación de ondas.
+    </small>
     <main>
       <img src="img/cover.jpg" />
       <small>Cargando simulación...</small>
     </main>
+
     <script src="js/motion.js"></script>
   </body>
 </html>
