--- a/index.html
+++ b/index.html
@@ -25,12 +25,34 @@
     <script src="js/parser.js"></script>
     <script src="js/script.js"></script>
     <h1 class="title-app">Simulación: Onda en una cuerda</h1>
-    <small class="simulation-description">
-      La simulación muestra la <b>propagación</b> de ondas mecánicas, donde la
-      energía viaja sin mover materia. La reflexión en los extremos sigue la
-      conservación del <b>momento y energía</b>, y la
-      <b>superposición</b> permite la combinación de ondas.
-    </small>
+    <div class="container-description-button hidden">
+      <button>
+        <small>Ver detalles</small>
+      </button>
+    </div>
+    <div
+      class="container-description-content container-description-content-translated-right"
+    >
+      <h2>Leyes aplicadas</h2>
+      <small>
+        La simulación La reflexión en los extremos sigue la conservación del
+        <b>momento y energía</b>, y la <b>superposición</b> permite la
+        combinación de ondas.
+      </small>
+      <h2>Datos</h2>
+      <small>
+        <span>Longitud de onda: λ = 0.5 m</span><br />
+        <span>Frecuencia: f = 2 Hz</span><br />
+        <span>Período: T = 0.5 s</span><br />
+        <span>Velocidad de propagación: v = 1 m/s</span><br />
+        <span>Amplitud: A = 0.75 cm</span><br />
+        <!-- <span>Número de onda: k = 12.57 rad/m</span><br /> -->
+        <span>Frecuencia angular: ω = 12.57 rad/s</span><br />
+        <!-- <span>Densidad lineal de masa: μ = 0.02 kg/m</span><br /> -->
+        <!-- <span>Función de onda: y(x,t) = 0.1 sin(12.57x - 12.57t) m</span> -->
+      </small>
+      <button>cerrar</button>
+    </div>
     <main>
       <img src="img/cover.jpg" />
       <small>Cargando simulación...</small>
