--- a/index.html
+++ b/index.html
@@ -41,16 +41,14 @@
       </small>
       <h2>Datos</h2>
       <small>
-        <span>Longitud de onda: λ = 0.5 m</span><br />
+        <span>Longitud de onda: λ = 50 cm</span><br />
         <span>Frecuencia: f = 2 Hz</span><br />
         <span>Período: T = 0.5 s</span><br />
-        <span>Velocidad de propagación: v = 1 m/s</span><br />
+        <span>Velocidad de propagación: v = 100 cm/s</span><br />
         <span>Amplitud: A = 0.75 cm</span><br />
-        <!-- <span>Número de onda: k = 12.57 rad/m</span><br /> -->
         <span>Frecuencia angular: ω = 12.57 rad/s</span><br />
-        <!-- <span>Densidad lineal de masa: μ = 0.02 kg/m</span><br /> -->
-        <!-- <span>Función de onda: y(x,t) = 0.1 sin(12.57x - 12.57t) m</span> -->
       </small>
+
       <button>cerrar</button>
     </div>
     <main>
