--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     >
       <h2>Leyes aplicadas</h2>
       <small>
-        La simulación La reflexión en los extremos sigue la conservación del
-        <b>momento y energía</b>, y la <b>superposición</b> permite la
-        combinación de ondas.
+        La simulación muestra la reflexión en los extremos de la cuerda  y sigue la conservación del
+        <b>momento y energía</b>. Asimismo, muestra la <b>superposición</b> que permite la
+        combinación de ondas y combinar múltiples desplazamientos.
       </small>
       <h2>Datos</h2>
       <small>
