--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
         <span>Amplitud: A = 0.75 cm</span><br />
         <span>Frecuencia angular: ω = 12.57 rad/s</span><br />
       </small>
-
+      <h2>Ondas viajeras</h2>
+      <small>
+        <span>Modelo -> y(x,t)=Asin(kx−ωt)+Asin(kx+ωt)</span><br />
+         <span>Por identidad -> y(x,t)=2Asin(kx)cos(ωt)</span><br />
+        <span>Reemplazando -> y(x,t)=1.5sin(0.1257x)cos(12.57t)</span><br />
+      </small>
       <button>cerrar</button>
     </div>
     <main>
